# webdav2localdisk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md
.github/workflows/: build.yml
docs/: PRINCIPLE.md
installer/: webdav2localdisk.iss
src/: cache.cpp  cache.h  fs.h  fs_driver.cpp  main.cpp  webdav_client.cpp  webdav_client.h
ui/: main.cpp  mainwindow.cpp  mainwindow.h
